docs/0.5.8/_sources/generated/skbio.alignment.TabularMSA.rst.txt

skbio.alignment.TabularMSA
==========================




   
      
   

   
      
   

   
      
   

   
      
   

   

   

   
      
   

   

   
      
   

   

   
      
   

   
      
   

   
      
   

   

   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   

   

   

   

   
      
   

   

   

   
      
   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   


.. currentmodule:: skbio.alignment

.. autoclass:: TabularMSA

   
   .. rubric:: Attributes

   .. autosummary::
   
      ~TabularMSA.default_write_format
      ~TabularMSA.dtype
      ~TabularMSA.iloc
      ~TabularMSA.index
      ~TabularMSA.loc
      ~TabularMSA.metadata
      ~TabularMSA.positional_metadata
      ~TabularMSA.shape
   

   
   .. rubric:: Built-ins

   .. autosummary::
      :toctree:
   
      ~TabularMSA.__bool__
      ~TabularMSA.__contains__
      ~TabularMSA.__copy__
      ~TabularMSA.__deepcopy__
      ~TabularMSA.__eq__
      ~TabularMSA.__ge__
      ~TabularMSA.__getitem__
      ~TabularMSA.__getstate__
      ~TabularMSA.__gt__
      ~TabularMSA.__iter__
      ~TabularMSA.__le__
      ~TabularMSA.__len__
      ~TabularMSA.__lt__
      ~TabularMSA.__ne__
      ~TabularMSA.__reversed__
      ~TabularMSA.__str__
   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      ~TabularMSA.append
      
      
      ~TabularMSA.consensus
      
      
      ~TabularMSA.conservation
      
      
      ~TabularMSA.extend
      
      
      ~TabularMSA.from_dict
      
      
      ~TabularMSA.gap_frequencies
      
      
      ~TabularMSA.has_metadata
      
      
      ~TabularMSA.has_positional_metadata
      
      
      ~TabularMSA.iter_positions
      
      
      ~TabularMSA.join
      
      
      ~TabularMSA.read
      
      
      ~TabularMSA.reassign_index
      
      
      ~TabularMSA.sort
      
      
      ~TabularMSA.to_dict
      
      
      ~TabularMSA.write
      
   